--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
             <form action="/subscribe" class="subscribe-form" id="subscribe-form">
               <label for="email" class="form-email">
-                <input type="email" placeholder="E-posta" id="email" class="email-input" name="email"/>
+                <input type="email" placeholder="E-mail" id="email" class="email-input" name="email"/>
               </label>
 
               <button type="submit" class="subscribe-button">
@@ -468,6 +468,64 @@
           </div>
         </div>
       </footer>
+
+
+      <!-- MODAL CONTAİNER -->
+
+      <div class="modal-overlay">
+        <div class="modal-window">
+          
+          <div class="modal-container">
+
+            <button class="btn-close">
+              <svg class="btn-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+
+            <p class="form-title">Leave your contacts and we will call you back</p>
+
+            <form action="/contacts" class="frm-contacts">
+
+              <label for="user-name" class="frm-label">Name</label>
+                <div class="input-icons">
+                  <input type="text" id="user-name" name="user-name" class="frm-input">
+                  <svg class="frm-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-human"></use>
+                  </svg>
+                </div>
+
+              <label for="user-phone" class="frm-label">Phone</label>
+                <div class="input-icons">
+                  <input type="tel" id="user-phone" name="user-phone" class="frm-input">
+                  <svg class="frm-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
+                </div>
+
+              
+              <label for="user-email" class="frm-label">Email</label>
+              <div class="input-icons">
+                <input type="email" id="user-email" name="user-email" class="frm-input">
+                <svg class="frm-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-mail"></use>
+                </svg>
+              </div>
+
+              <label for="user-comment" class="frm-label">Comment</label>
+              <div class="frm-comment">
+                <textarea name="user-comment" id="user-comment" placeholder="Text input" class="comment-input"></textarea>
+              </div>
+
+            </form>
+
+
+          </div>
+
+
+        </div>
+      </div>
+
     </main>
   </body>
 </html>
