--- a/index.html
+++ b/index.html
@@ -471,10 +471,8 @@
 
 
       <!-- MODAL CONTAİNER -->
-
-      <div class="modal-window">
-                  
-          <div class="modal-container">
+      <div class="modal-window-container">
+        <div class="modal-window">
 
             <button class="btn-close">
               <svg class="btn-close-icon" width="8" height="8">
