--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
 
       <!-- MODAL CONTAİNER -->
-      <div class="modal-window-container">
+      <!-- <div class="modal-window-container">
         <div class="modal-window">
 
             <button class="btn-close">
@@ -521,7 +521,111 @@
 
 
         
+      </div> -->
+
+       <!-- MODAL WİNDOW -->
+    <div class="modal-window-container">
+      <div class="modal-window">
+        <button class="modal-window-btn" type="button">
+          <svg class="x-icon-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <p class="modal-window-title">
+          Leave your contacts and we will call you back
+        </p>
+
+        <form>
+          <div class="modal-window-form">
+            <label class="modal-window-form-label" for="user-name">Name</label>
+            <div class="inputs-icons-container">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="modal-window-form-input"
+              />
+
+              <svg class="inputs-icons-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-human"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-window-form">
+            <label class="modal-window-form-label" for="user-phone">
+              Phone</label
+            >
+            <div class="inputs-icons-container">
+              <input
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+                class="modal-window-form-input"
+              />
+
+              <svg class="inputs-icons-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-window-form">
+            <label class="modal-window-form-label" for="user-mail">
+              Email</label
+            >
+            <div class="inputs-icons-container">
+              <input
+                type="email"
+                id="user-mail"
+                name="user-mail"
+                class="modal-window-form-input"
+              />
+
+              <svg class="inputs-icons-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-window-form-text-container">
+            <label for="user-comment" class="modal-window-form-label"
+              >Comment</label
+            >
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              class="text-area"
+            ></textarea>
+          </div>
+
+          <div class="checkbox-container">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+              class="privacy-checkbox visually-hidden"
+            />
+            <label for="user-privacy" class="privacy-label">
+              <span class="privacy-span">
+                <svg width="10" height="8" class="span-svg">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button type="submit" class="modal-window-second-btn btn">
+            SEND
+          </button>
+        </form>
       </div>
+    </div>
 
     </main>
   </body>
