--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <!-- ilk bölüm -->
-    <main>
+    <div class="main">
       <section class="hero-image">
         <div class="container hero">
           <h1 class="hero-info">Effective Solutions for Your Business</h1>
@@ -627,6 +627,6 @@
       </div>
     </div>
 
-    </main>
+    </div>
   </body>
 </html>
