--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <!-- MODAL CONTAİNER -->
       
         <div class="modal-window">
-          <div class="modal-window-container">
+          <div class="modal-container">
             <button class="btn-close">
               <svg class="btn-close-icon" width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
