--- a/index.html
+++ b/index.html
@@ -542,6 +542,31 @@
                 class="comment-input"
               ></textarea>
             </div>
+
+            <div class="checkbox-container">
+              <input
+                type="checkbox"
+                id="user-privacy"
+                value="true"
+                name="user-privacy"
+                class="privacy-checkbox visually-hidden"
+              />
+              <label for="user-privacy" class="privacy-label">
+                <span class="privacy-span">
+                  <svg width="10" height="8" class="span-svg">
+                    <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a href="" class="privacy-link">Privacy Policy</a>
+              </label>
+            </div>
+  
+            <button type="submit" class="modal-window-second-btn btn">
+              SEND
+            </button>
+
+
           </form>
         </div>
       </div>
