--- a/index.html
+++ b/index.html
@@ -494,7 +494,9 @@
           </p>
 
           <form action="/contacts" class="frm-contacts">
+            <div class="form-label">
             <label for="user-name" class="frm-label">Name</label>
+            </div>
             <div class="input-icons">
               <input
                 type="text"
